<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Babelio+</string>
    
    <!-- Authentication -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Full Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_account">Create New Account</string>
    
    <!-- Navigation -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    
    <!-- Books -->
    <string name="book_cover">Book Cover</string>
    <string name="search_books">Search books...</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="add_comment">Add Comment</string>
    <string name="reviews">Reviews</string>
    
    <!-- Profile -->
    <string name="profile_picture">Profile Picture</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="logout">Logout</string>
    
    <!-- Others -->
    <string name="loading">Loading...</string>
</resources>